tests/fixtures/invalid/int_floordiv_bytes.py
# Cannot floor divide Int and Bytes
x: int = 1 // b"hello"
